[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["storage", "logic", "reward-logic"]

[workspace.dependencies]
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-core = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gsdk = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }

# Local IO-crates

io.path = "io"
storage-io.path = "storage/io"
logic-io.path = "logic/io"
reward-logic-io.path = "reward-logic/io"

tokio = "1"

# External binaries
sharded-fungible-token-io = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }