[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["storage", "logic", "reward-logic"]

[workspace.dependencies]
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gear-core = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gsdk = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.4.0" }
primitive-types = { version = "0.12", default-features = false }

# Local IO-crates

io.path = "io"
storage-io.path = "storage/io"
logic-io.path = "logic/io"
reward-logic-io.path = "reward-logic/io"

tokio = "1"
