[package]
name = "io"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
gmeta.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
