[package]
name = "logic"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io.workspace = true
logic-io.workspace = true
gstd.workspace = true
gmeta.workspace = true

[build-dependencies]
logic-io.workspace = true
gear-wasm-builder.workspace = true

[dev-dependencies]
gtest.workspace = true
