[package]
name = "storage-state"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
io.workspace = true
storage-io.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"]}